testsuite/tests/typecheck/should_fail/T18723a.stderr
T18723a.hs:4:3: error: [GHC-94803]
    • A 65-tuple is too large for GHC
        (max size is 64)
        Workaround: use nested tuples or define a data type
    • In the type ‘(Int, Int, Int, Int, Int, Int, Int, Int, Int, Int,
                    Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int,
                    Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int,
                    Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int,
                    Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int, Int,
                    Int, Int, Int)’
      In the definition of data constructor ‘MkT1’
      In the data type declaration for ‘T1’

